--- a/style.css
+++ b/style.css
@@ -312,9 +312,6 @@ h4 {
 @media (max-width: 700px) {
   .header {
     padding: 0 4rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
   }
 
   .header__title {
@@ -347,6 +344,9 @@ h4 {
 
   h4 {
     font-size: 2rem;
+  }
+   .header {
+    height:50vh;
   }
 }
 
